Update Go 1.16; add arm builds
Closes #10

--- a/.github/goreleaser.yaml
+++ b/.github/goreleaser.yaml
@@ -9,11 +9,13 @@ builds:
     ldflags:
       - "-s -w -X main.version={{.Version}} -X main.commit={{.Commit}}"
     goos:
-      - linux
       - darwin
+      - linux
     goarch:
-      - amd64
       - '386'
+      - amd64
+      - arm
+      - arm64
     ignore:
       - goos: darwin
         goarch: '386'
